# geometria

./: CMakeLists.txt  README.md
src/: main.cpp
src/ConvexHullStrategy/: AConvexHullStrategy.h  Orientation.h
src/ConvexHullStrategy/DivideAndConquerAlgorithm/: DivideAndConquerAlgorithm.cpp  DivideAndConquerAlgorithm.h
src/ConvexHullStrategy/GiftWrappingAlgorithm/: GiftWrappingAlgorithm.cpp  GiftWrappingAlgorithm.h
src/Point/: Point.cpp  Point.h
src/PointGenerationStrategy/: APointGenerationStrategy.h
src/PointGenerationStrategy/HullPercentageStrategy/: HullPercentageStrategy.cpp  HullPercentageStrategy.h
src/PointGenerationStrategy/RandomPointStrategy/: RandomPointStrategy.cpp  RandomPointStrategy.h
src/Poligon/: Poligon.cpp  Poligon.h
src/Vector/: Vector.cpp  Vector.h
test/: CMakeLists.txt  ConvexHullTest.cpp  OrientationTest.cpp  PointGenerationTest.cpp  PointTest.cpp  PolygonTest.cpp  VectorTest.cpp  tests.cpp
